Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ h2 {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 30%;
+  width: 50%;
 }
 ul {
   list-style-type: none;
@@ -86,12 +86,6 @@ h3 {
   font-weight: bold;
   margin: auto;
   width: 1100px;
-}
-.center2 {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
 }
 html, body {
     max-width: 100%;
